# Trading

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt
bench/src/: bench_main.cpp  histogram.hpp  itch_bench_main.cpp  workload.hpp
docs/: benchmarks-itch.md  benchmarks.md
docs/superpowers/plans/: 2026-05-29-tradeflow-phase0-1.md
docs/superpowers/specs/: 2026-05-29-tradeflow-design.md  2026-05-29-tradeflow-itch-redesign.md
engine/: CMakeLists.txt
engine/include/tradeflow/: baseline_engine.hpp  delta.hpp  matching_engine.hpp  mpsc_ring.hpp  order.hpp  order_book.hpp  spin.hpp  spsc_ring.hpp  symbol_worker.hpp  version.hpp
engine/include/tradeflow/itch/: book_builder.hpp  itch.hpp  itch_generator.hpp  itch_reader.hpp  pipeline.hpp
scripts/: fetch_itch.sh  run_tsan.sh  setup.sh
tests/: CMakeLists.txt  baseline_engine_test.cpp  book_builder_test.cpp  itch_generator_test.cpp  itch_parser_test.cpp  itch_pipeline_test.cpp  matching_engine_test.cpp  mpsc_ring_test.cpp  order_book_market_test.cpp  order_book_test.cpp  sanity_test.cpp  spsc_ring_test.cpp  symbol_worker_test.cpp  types_test.cpp
tools/: CMakeLists.txt
tools/src/: itch_inspect.cpp
